Part 8 MudBlazor Migration

--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -22,7 +22,7 @@
 
                     <MudSelectList
                         T="@DirectoryTemplate"
-                        Values="Templates"
+                        Values="@Templates"
                         @bind-Value="@SelectedTemplate"
                         />
                
