--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -68,9 +68,9 @@
 
 
                     </MudContainer>
-                    <MudElement Style="position:fixed; bottom:0;">
+                    <MudElement Style="position:fixed; bottom:0;" Class="mud-width-full">
                         <DirectoryConnectingIndicator />
-
+                        
                         <AppFooter />
 
                     </MudElement>
