--- a/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
+++ b/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
@@ -5,7 +5,30 @@
 <AppPageTitle>Recycle Bin</AppPageTitle>
 
 <h3>Recycle Bin</h3>
-    @*<DataGrid TItem="IDirectoryEntryAdapter"
+<MudDataGrid T="IDirectoryEntryAdapter"
+              Virtualize
+             ColumnResizeMode="ResizeMode.Container"
+              Hideable
+             Items="@deletedObjects"
+             Filterable="false"
+             SortMode="@SortMode.Multiple"
+             Groupable="false">
+    <Columns>
+        <PropertyColumn Property="x => x.ObjectType" />
+        <PropertyColumn Property="x => x.CanonicalName" />
+        <PropertyColumn Property="x => x.LastChanged" />
+        <TemplateColumn CellClass="d-flex justify-end">
+            <CellTemplate>
+                <MudStack Row>
+                    <MudButton Color="Color.Primary" Variant="@Variant.Filled" OnClick="@(()=>{Restore(context.Item);})">Restore</MudButton>
+
+                </MudStack>
+            </CellTemplate>
+        </TemplateColumn>
+
+    </Columns>
+</MudDataGrid>
+@*<DataGrid TItem="IDirectoryEntryAdapter"
           Data="deletedObjects"
           Responsive
      Virtualize>
@@ -37,5 +60,21 @@
         deletedObjects = await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>();
 
         await InvokeAsync(StateHasChanged);
+    }
+    async Task Restore(IDirectoryEntryAdapter entryToRestore)
+    {
+        if (await MessageService.Confirm("Are you sure you want to restore " + entryToRestore.CanonicalName + " to " + entryToRestore.LastKnownParent.CanonicalName, "Restore?"))
+        {
+            if (Directory.RestoreTombstone(entryToRestore, entryToRestore.LastKnownParent))
+            {
+                SnackBarService.Success(entryToRestore.CanonicalName + " restored successfully");
+            }
+            else
+            {
+                SnackBarService.Error(entryToRestore.CanonicalName + " could not be restored");
+
+            }
+
+        }
     }
 }
