--- a/BLAZAM/Shared/UI/AppModal.razor
+++ b/BLAZAM/Shared/UI/AppModal.razor
@@ -1,13 +1,15 @@
 ﻿@inherits MudMessageBox
-<MudMessageBox OnCancel="OnClosing" Title=@Title @ref="Modal" >
+<MudMessageBox OnCancel="OnClosing" Title=@Title @ref="Modal">
     <MessageContent>
         <MudText Color="Color">
-            @ChildContent
+            <CascadingValue Value="Modal">
+                @ChildContent
+            </CascadingValue>
         </MudText>
     </MessageContent>
 </MudMessageBox>
 @code {
-    #nullable disable warnings
+#nullable disable warnings
     [Inject]
     protected AppSnackBarService NotificationService { get; set; }
     [Parameter]
@@ -21,7 +23,7 @@
     public Color Color { get; set; } = Color.Default;
 
     [Parameter]
-    public RenderFragment? ChildContent{ get; set; }
+    public RenderFragment? ChildContent { get; set; }
 
     [CascadingParameter]
     protected MudMessageBox? Modal { get; set; }
@@ -32,12 +34,15 @@
     bool _isShown = false;
 
     [Parameter]
-    public bool IsShown { get=>_isShown; set
+    public bool IsShown
+    {
+        get => _isShown; set
         {
-            if(value==_isShown)return;
+            if (value == _isShown) return;
             _isShown = value;
             IsShownChanged.InvokeAsync(value);
-        } }
+        }
+    }
 
     [Parameter]
     public EventCallback<bool> IsShownChanged { get; set; }
