--- a/BLAZAM/Shared/UI/Section.razor
+++ b/BLAZAM/Shared/UI/Section.razor
@@ -1,4 +1,4 @@
-﻿<MudPaper Class=@(" mud-width-full section px-3 py")>
+﻿<MudPaper Class=@((FullWidth?"mud-width-full":"") + " section px-4 py-3")>
     @if (SectionHeaderPosition == HeaderPosition.TopLeft || SectionHeaderPosition == HeaderPosition.TopRight)
     {
         <MudElement Class="section-title-container">
@@ -33,13 +33,13 @@
     string vmargin = "";
     @if (SectionHeaderPosition == HeaderPosition.TopLeft || SectionHeaderPosition == HeaderPosition.TopRight)
     {
-        vspacing = " top: -25px";
-        vmargin = "margin-bottom: -35px";
+        //vspacing = " top: -25px";
+       // vmargin = "margin-bottom: -35px";
     }
     else
     {
-        vspacing = " bottom: -22px";
-        vmargin = "margin-top: -50px";
+       // vspacing = " bottom: -22px";
+       // vmargin = "margin-top: -50px";
     }
 
 
@@ -71,16 +71,17 @@
     @vmargin;
     @hspacing;
     @hmargin;
-        padding: 10px;
+        /*padding: 10px;*/
         max-width: fit-content;
     }
 
     .section-title-text {
+        font-weight: bold;
         /*  margin-left: 10px; */
     }
 
     .section-content {
-        padding: 10px;
+        /*padding: 10px;*/
     }
 </style>
 
@@ -103,6 +104,10 @@
     /// </summary>
     [Parameter]
     public Color TextColor { get; set; } = Color.Secondary;
+
+
+    [Parameter]
+    public bool FullWidth { get; set; } = true;
 
     //[Parameter]
     //public Color BackgroundColor { get; set; } = MudBlazor.ThemeManager.ThemePaletteColor.Surface;
